New Dockerfile. first steps